[package]
name = "consecrates"
version = "0.1.1"
authors = ["adamsky <adamsky@enum.space>"]
edition = "2018"
description = "Tiny but virtuous crates.io client."
repository = "https://github.com/adamsky/consecrates"
keywords = ["crates", "crates-io", "api", "client"]
readme = "README.md"
license = "MIT"

[dependencies]
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
http_req  = { version = "0.7.2", default-features = false, features = ["rust-tls"] }
anyhow = "1.0.38"
chrono = { version = "0.4.19", features = ["serde"] }
