[package]
name = "consecrates"
version = "0.1.1"
authors = ["Adam Wierchoła <adam@wierchola.com>"]
edition = "2018"
description = "Tiny but virtuous crates.io client."
repository = "https://github.com/adamsky/consecrates"
keywords = ["crates", "crates-io", "api", "client"]
readme = "README.md"
license = "MIT"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
http_req  = { version = "0.13.0", default-features = false, features = ["rust-tls"] }
anyhow = "1.0.89"
chrono = { version = "0.4.38", features = ["serde"] }
